--- a/.github/workflows/cdk-deploy.yml
+++ b/.github/workflows/cdk-deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: ["master"]   # deploy solo en master
   pull_request:
-    branches: ["main", "master"]
+    branches: ["main", "master"]  # checks en PR
 
 permissions:
   contents: read
@@ -60,7 +60,6 @@ jobs:
         working-directory: ./lambda/extractor
         run: |
           python -m pip install --upgrade pip
-          # install dependencies into .build_layer/python so it's directly usable as Lambda Layer root 'python'
           rm -rf .build_layer || true
           mkdir -p .build_layer/python
           pip install -r requirements.txt -t .build_layer/python
@@ -72,10 +71,14 @@ jobs:
         working-directory: ./cdk
         run: cdk synth
 
-      - name: CDK bootstrap (idempotent)
+      # CDK bootstrap idempotente, solo necesario si deploy real
+      - name: CDK bootstrap
+        if: github.ref == 'refs/heads/master' && github.event_name == 'push'
         working-directory: ./cdk
         run: cdk bootstrap aws://$CDK_DEFAULT_ACCOUNT/$CDK_DEFAULT_REGION || true
 
+      # CDK deploy solo en push a master
       - name: CDK deploy (auto-approve)
+        if: github.ref == 'refs/heads/master' && github.event_name == 'push'
         working-directory: ./cdk
         run: cdk deploy DataPipelineStack --require-approval never
